src/sass/main.scss
/* ... */
.p_s p.copyright {
	text-align: center;
	margin: 150px auto 0;
	padding-bottom: 30px;
}

.qtip-wrapper {
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;

	-moz-box-shadow: 0px 3px 3px rgba(0,0,0,0.3);
	-webkit-box-shadow: 0px 3px 3px rgba(0,0,0,0.3);
	box-shadow: 0px 3px 3px rgba(0,0,0,0.3);
}
.qtip-content {
	font-family: 'Lato', Arial, sans;
	font-weight: 900;
}

#no_permission h1 {
	font-family: 'Lato', arial, serif;
	font-weight: 700;
	font-size: 33px;
	padding: 0 0 5px 0;
	padding-bottom: 20px;
	margin: 0 0 30px 0;
	border-bottom: dotted black 1px;
}
#no_permission .error-support .contact dt{
	width: 65px;
}
#no_permission .error-support .online-support dt{
	width: 170px;
}
#swfplaceholder {
	position: absolute;
	background: #ccc;
}
#swfplaceholder p{
	position: absolute;
	font-family: 'Lato';
	font-size: 3em;
	font-weight: bold;
	color: #aaa;
	padding: 0;
	margin: 0;
}


/*********
Fancybox Overrides
*********/
#fancybox-left-ico, #fancybox-right-ico {
	background-color: rgba(0,0,0,0.5);
	background-image: none;
	position: absolute;
	top: 50%;
	left: 0 !important;
	margin: -50px 0 0 -120px;
	width: 100px;
	height: 100px;
	border-radius: 100%;
	cursor: pointer;
	z-index: 1102;
	display: block !important;
	-webkit-transition: 200ms all;
	   -moz-transition: 200ms all;
	    -ms-transition: 200ms all;
	     -o-transition: 200ms all;
	        transition: 200ms all;
}

#fancybox-close {
	position: absolute;
	top: 20px;
	right: 20px;
	background: none;
	color: rgba(255,255,255,0.7);
	background-color: rgba(0,0,0,0.5);
	width: 40px;
	height: 40px;
	border-radius: 100%;
	text-align:center;
	vertical-align:middle;
}
#fancybox-close:after {
	line-height: 34.5px;
	font-size: 40px;
	margin: 0px;
	content: "\00D7";
}
#fancybox-close:hover {
	text-decoration: none;
}
#fancybox-left-ico {
	background-position: 51px -30px;
}
#fancybox-right-ico {
	background-position: 51px -60px;
	left: auto !important;
	right: -120px  !important;
}
#fancybox-left:hover, #fancybox-right:hover {
	visibility: visible; /* IE6 */
}
#fancybox-left-ico:before {
	position: absolute;
	left: 28px;
	top: 20px;
	width: 0;
	height: 0;
	border-top: 30px solid transparent;
	border-bottom: 30px solid transparent;
	border-right: 30px solid rgba(255,255,255,0.7);
	content: "";
}
#fancybox-right-ico:before {
	position: absolute;
	top: 20px;
	right: 28px;
	width: 0;
	height: 0;
	border-top: 30px solid transparent;
	border-bottom: 30px solid transparent;
	border-left: 30px solid rgba(255,255,255,0.7);
	content: "";
}

@media only screen and (min-device-pixel-ratio: 2), only screen and (-webkit-min-device-pixel-ratio: 2){ 
	h1.logo a {
	   background: url(../img/retina/materia_tmp_logo@2x.png) 0% 0% no-repeat;
	   background-size: 160px 68px;
	}

	header{
		background:#fff url(../img/header_border.png) 0% 100% repeat-x;
		background-size: 12px 6px;
	}
 

}

.qtip {
	position: absolute;
	background: #b944cc;
	border: 4px solid #b944cc;
	z-index: 101;
	color: #fff;
	padding: 10px;
	border-radius: 5px;
	width: 230px;
	font-weight: bold;
}
.qtip.top:after, .qtip.top:before {
	bottom: 100%;
	left: 50%;
	border: solid transparent;
	content: " ";
	height: 0;
	width: 0;
	position: absolute;
	pointer-events: none;
}

.qtip.top:after {
	border-color: rgba(185, 68, 204, 0);
	border-bottom-color: #b944cc;
	border-width: 20px;
	margin-left: -20px;
}
.qtip.top:before {
	border-color: rgba(185, 68, 204, 0);
	border-bottom-color: #b944cc;
	border-width: 26px;
	margin-left: -26px;
}

.qtip.right:after {
	left: 100%;
	top: 50%;
	border: solid transparent;
	content: " ";
	height: 0;
	width: 0;
	position: absolute;
	pointer-events: none;
	border-color: rgba(185, 68, 204, 0);
	border-left-color: #b944cc;
	border-width: 28px;
	margin-top: -28px;
}

span.subtitle {
	font-size:1.1em;
	font-weight:700;
	font-family: 'Lato', arial, serif;
}

